@@ -449,25 +449,34 @@ class AudioList(FlixList):
             if track.original:
                 repopulated_tracks.add(track.index)
 
-            self.tracks.append(
-                Audio(
-                    parent=self,
-                    audio=track.friendly_info,
-                    all_info=Box(track.raw_info) if track.raw_info else None,
-                    title=track.title,
-                    language=track.language,
-                    profile=track.profile,
-                    original=track.original,
-                    index=track.index,
-                    outdex=track.outdex,
-                    codec=track.codec,
-                    codecs=audio_formats,
-                    channels=track.channels,
-                    available_audio_encoders=self.available_audio_encoders,
-                    enabled=True,
-                    disable_dup=disable_dups,
-                )
+            new_track = Audio(
+                parent=self,
+                audio=track.friendly_info,
+                all_info=Box(track.raw_info) if track.raw_info else None,
+                title=track.title,
+                language=track.language,
+                profile=track.profile,
+                original=track.original,
+                index=track.index,
+                outdex=track.outdex,
+                codec=track.codec,
+                codecs=audio_formats,
+                channels=track.channels,
+                available_audio_encoders=self.available_audio_encoders,
+                enabled=True,
+                disable_dup=disable_dups,
             )
+
+            new_track.widgets.downmix.setCurrentText(track.downmix)
+            new_track.widgets.convert_to.setCurrentText(track.conversion_codec)
+            new_track.widgets.convert_bitrate.setCurrentText(track.conversion_bitrate)
+            new_track.widgets.title.setText(track.title)
+            if track.language:
+                new_track.widgets.language.setCurrentText(Lang(track.language).name)
+            else:
+                new_track.widgets.language.setCurrentIndex(0)
+
+            self.tracks.append(new_track)
 
         for i, x in enumerate(self.app.fastflix.current_video.streams.audio, start=1):
             if x.index in repopulated_tracks:
